--- a/egs2/ipapack/asr1/conf/tuning/train_asr_xlsr_conformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_xlsr_conformer.yaml
@@ -23,7 +23,7 @@ encoder_conf:
     dropout_rate: 0.1
     positional_dropout_rate: 0.1
     attention_dropout_rate: 0.1
-    input_layer: conv2d
+    input_layer: conv2d2
     normalize_before: true
     macaron_style: true
     rel_pos_type: latest
