--- a/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
@@ -1,7 +1,11 @@
+seed: 11711
+use_amp: true
+num_workers: 1
+log_interval: 100
 batch_type: numel
-batch_bins: 16000000
+batch_bins: 5000000
 accum_grad: 4
-max_epoch: 200
+max_epoch: 50
 patience: none
 # The initialization method for model parameters
 init: xavier_uniform
