--- a/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
@@ -43,9 +43,10 @@ model_conf:
     lsm_weight: 0.1
     length_normalized_loss: false
 
+
 optim: adam
 optim_conf:
-    lr: 0.002
+    lr: 0.0001 # previously 002
 scheduler: warmuplr
 scheduler_conf:
     warmup_steps: 25000
