--- a/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_transformer.yaml
@@ -1,11 +1,11 @@
 seed: 11711
 use_amp: true
-num_workers: 1
-log_interval: 100
+num_workers: 4
+log_interval: 50  # debugging only
 batch_type: numel
-batch_bins: 5000000
-accum_grad: 4
-max_epoch: 50
+num_iters_per_epoch: 5000
+batch_bins: 7500000
+max_epoch: 100
 patience: none
 # The initialization method for model parameters
 init: xavier_uniform
