--- a/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_multitask_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_multitask_transformer.yaml
@@ -16,8 +16,8 @@ encoder_conf:
     attention_dropout_rate: 0.1
     input_layer: conv2d2
     normalize_before: true
-	interctc_layer_idx: [11]
-	interctc_use_conditioning: false
+	interctc_layer_idx: [11]  # use penultimate layer; 1-indexed?
+	interctc_use_conditioning: false  # self-conditioning
 
 decoder: null
 
