fix: correct yaml in conf/tuning/train_asr_xeus_multitask_transformer.yaml

--- a/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_multitask_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_multitask_transformer.yaml
@@ -16,8 +16,8 @@ encoder_conf:
     attention_dropout_rate: 0.1
     input_layer: conv2d2
     normalize_before: true
-	interctc_layer_idx: [11]  # use penultimate layer; 1-indexed?
-	interctc_use_conditioning: false  # self-conditioning
+    interctc_layer_idx: [11]  # use penultimate layer; 1-indexed
+    interctc_use_conditioning: false  # self-conditioning
 
 decoder: null
 
@@ -26,33 +26,32 @@ model_conf:
     lsm_weight: 0.1
     length_normalized_loss: false
     extract_feats_in_collect_stats: false
-	interctc_weight: 0.25
-	aux_ctc:
-		'10':
-		 - syl
-		 - son
-		 - cons
-		 - cont
-		 - delrel
-		 - lat
-		 - nas
-		 - strid
-		 - voi
-		 - sg
-		 - cg
-		 - ant
-		 - cor
-		 - distr
-		 - lab
-		 - hi
-		 - lo
-		 - back
-		 - round
-		 - velaric
-		 - tense
-		 - long
+    interctc_weight: 0.25
+    aux_ctc:
+        '10':
+            - syl
+            - son
+            - cons
+            - cont
+            - delrel
+            - lat
+            - nas
+            - strid
+            - voi
+            - sg
+            - cg
+            - ant
+            - cor
+            - distr
+            - lab
+            - hi
+            - lo
+            - back
+            - round
+            - velaric
+            - tense
+            - long
 
-		
 
 aux_ctc_tasks: ["syl", "son", "cons", "cont", "delrel", "lat", "nas", "strid", "voi", "sg", "cg", "ant", "cor", "distr", "lab", "hi", "lo", "back", "round", "velaric", "tense", "long"]
 
