--- a/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_transformer.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_xeus_transformer.yaml
@@ -25,7 +25,9 @@ encoder_conf:
     dropout_rate: 0.1
     positional_dropout_rate: 0.1
     attention_dropout_rate: 0.0
-    input_layer: conv2d
+    input_layer: conv2d2
+    # since it's already using XEUS features, don't need much downsampling
+    # 20 ms resolution (1/2 length)
     normalize_before: true
 
 decoder: transformer
