feat: Implemented individual CTC vocabularies for each feature and added vocabulary generation to create_artic_feats.py

--- a/egs2/ipapack/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
+++ b/egs2/ipapack/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
@@ -188,7 +188,7 @@ model_conf:
     interctc_weight: 0.5
     lsm_weight: 0.1
     length_normalized_loss: false
-    aux_ctc_share_vocab: true
+    aux_ctc_share_vocab: "dump/raw/train/feature_values.json"
     aux_ctc:
       '0':
           - syl
