feat: made utt_id language mapping optional for phoneme composition without an allophone layer and updated utt_id separators to the simplified format

--- a/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
+++ b/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
@@ -41,8 +41,8 @@ encoder_conf:
       - velaric
       - tense
       - long
-    language_id_mapping_path: dump/raw/supported_languages.json
-    utt_id_separator: "_daaki_|_light_warlpiri_|_mojeno_trinitario_|_north_alta_|_"
+    # language_id_mapping_path: dump/raw/supported_languages.json
+    utt_id_separator: "_"
     allophone_languages:
       - afr
       - amh
