feat: applied fixed phoneme mapping to FLECO and 'set extract_feats_in_collect_stats' to false to speed up pre-processing

--- a/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
+++ b/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
@@ -187,6 +187,7 @@ encoder_conf:
     # blank_offset:
 
 model_conf:
+    extract_feats_in_collect_stats: false
     ctc_weight: 1.0
     interctc_weight: 0.5
     lsm_weight: 0.1
