--- a/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_ebf_conv2d_size1024_e18_d18_piecewise_lr2e-4_warmup60k_flashattn.yaml
+++ b/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_ebf_conv2d_size1024_e18_d18_piecewise_lr2e-4_warmup60k_flashattn.yaml
@@ -2,16 +2,24 @@
 
 preprocessor: s2t
 preprocessor_conf:
-    text_prev_name: text_prev
-    text_ctc_name: text_ctc
+    text_prev_name: text.prev
+    text_ctc_name: text.ctc
     fs: 16000
     na_symbol: "<na>"
-    speech_length: 30
+    speech_length: 20
     speech_resolution: 0.02
-    speech_init_silence: 30
-    text_prev_apply_prob: 0.5
-    time_apply_prob: 0.5
+    speech_init_silence: 20
+    text_prev_apply_prob: 0.5 # whether to condition on text_prev
+        # if text_prev is <na>, applying text_prev doesn't do anything
+        #   thus for ASR and phoneme recognition, this doesn't do anything
+        #   but for G2P and P2G, what removing the context does is to
+        #   rely only on the audio
+        # TODO: fully removing the context might be too harsh though?
+        #   may want to try masking
+    time_apply_prob: 0.0  # we don't have timestamps
     notime_symbol: "<notimestamps>"
+    first_time_symbol: "<0.00>"
+    last_time_symbol: "<20.00>"
 
 frontend_conf:
     n_fft: 512
