Revert "fix: S2TPreprocessor unintentionally requires us to name text_ctc and text_prev exactly as text_ctc and text_prev"
This reverts commit 5082d5db0708fff76762495adb030063a2c46837.

--- a/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_ebf_conv2d_size1024_e18_d18_piecewise_lr2e-4_warmup60k_flashattn.yaml
+++ b/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_ebf_conv2d_size1024_e18_d18_piecewise_lr2e-4_warmup60k_flashattn.yaml
@@ -2,8 +2,8 @@
 
 preprocessor: s2t
 preprocessor_conf:
-    text_prev_name: text_prev
-    text_ctc_name: text_ctc
+    text_prev_name: text.prev
+    text_ctc_name: text.ctc
     fs: 16000
     na_symbol: "<na>"
     speech_length: 20
