WIP: Added config for baseline with allophone layer, updated to match FLECO and initial fallback for languages without allophone data

--- a/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
+++ b/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
@@ -13,7 +13,7 @@ frontend_conf:
 encoder: allophant
 encoder_conf:
     phoneme_embedding_size: 640
-    # Blank offset 2 to ignore <unk> token from Stage 5
+    # Blank offset 2 to handle <unk> token from Stage 5
     blank_offset: 2
     # <sos/eos> token from Stage 5
     additional_special_tokens: 1
@@ -46,148 +46,6 @@ encoder_conf:
       - long
     language_id_mapping_path: dump/raw/supported_languages.json
     utt_id_separator: "_"
-    allophone_languages:
-      - afr
-      - amh
-      - MIS-ana1239
-      - ara
-      - ara
-      - arp
-      - aze
-      - bab
-      - bel
-      - bul
-      - ben
-      - boa
-      - bos
-      - cat
-      - cbs
-      - cat
-      - ceb
-      - cmn
-      - ces
-      - cym
-      - ces
-      - dan
-      - ptv
-      - deu
-      - nld
-      - ell
-      - eng
-      - eng
-      - epo
-      - spa
-      - est
-      - est
-      - evn
-      - ful
-      - fin
-      - fra
-      - gle
-      - deu
-      - glg
-      - gle
-      - gow
-      - ell
-      - hau
-      - hin
-      - hrv
-      - hun
-      - ind
-      - ina
-      - ind
-      - isl
-      - ita
-      - ita
-      - jpn
-      - jje
-      - jav
-      - kat
-      - kke
-      - xas
-      - kir
-      - kaz
-      - kor
-      - tci
-      - kir
-      - MIS-ligh1234
-      - lit
-      - lao
-      - lit
-      - mri
-      - mkd
-      - mal
-      - mlt
-      - mon
-      - MIS-trin178
-      - mon
-      - mar
-      - msa
-      - mlt
-      - mya
-      - nob
-      - ngk
-      - nld
-      - ngh
-      - aqn
-      - nya
-      - orm
-      - ori
-      - fnb
-      - pan
-      - pol
-      - pol
-      - pt
-      - por
-      - rgr
-      - ron
-      - ron
-      - rus
-      - rus
-      - ruc
-      - MIS-sadu1234
-      - MIS-sanz1248
-      - svs
-      - snd
-      - slk
-      - slv
-      - slk
-      - slv
-      - sna
-      - som
-      - spa
-      - srp
-      - nsm
-      - swe
-      - sva
-      - swa
-      - swe
-      - tam
-      - tab
-      - tat
-      - tel
-      - tio
-      - poq
-      - tgk
-      - tha
-      - tur
-      - MIS-tsim1256
-      - tur
-      - ukr
-      - ukr
-      - urd
-      - uzb
-      - vra
-      - vie
-      - cy
-      - xho
-      - yor
-      - nru
-      - yue
-      - zho
-      - zul
-    # phoible_path:
-    # blank_offset:
 
 model_conf:
     extract_feats_in_collect_stats: false
@@ -221,7 +79,7 @@ model_conf:
           - tense
           # - long
 
-aux_ctc_tasks: ["syl", "son", "cons", "cont", "delrel", "lat", "nas", "strid", "voi", "sg", "cg", "ant", "cor", "distr", "lab", "hi", "lo", "back", "round", "velaric", "tense", "long"]
+aux_ctc_tasks: ["syl", "son", "cons", "cont", "delrel", "lat", "nas", "strid", "voi", "sg", "cg", "ant", "cor", "distr", "lab", "hi", "lo", "back", "round", "velaric", "tense"] # , "long"]
 
 log_interval: 1
 num_att_plot: 0
