--- a/egs2/ipapack_plus/s2t1/conf/slurm.conf
+++ b/egs2/ipapack_plus/s2t1/conf/slurm.conf
@@ -1,29 +1,20 @@
-# Default configuration, ensure PATH exported to job
+# Default configuration
 command sbatch --export=PATH
-# specify job name
 option name=* --job-name $0
-# default time=48:00:00
+default time=2-00:00:00
 option time=* --time $0
 option mem=* --mem-per-cpu $0
-# no memory limit
 option mem=0
-# TODO: add back?
-# --cpus-per-task 3
-option num_threads=*
-# 1 cpu = 2 GB
-# option num_threads=1 --cpus-per-task 3
+option num_threads=* --cpus-per-task $0
+option num_threads=1 --cpus-per-task 1
 option num_nodes=* --nodes $0
 default gpu=0
-# when no GPU requested, use RM-shared with 3 CPUs per task
-# option gpu=0 -p RM-shared --cpus-per-task 3 --time=10:00:00 - TODO: add back
-option gpu=0 -p RM-shared --cpus-per-task 3 --time=10:00:00
-# TODO: need to add conditional statement
-# option gpu=* -p GPU-shared --gres=gpu:$0 -c $0 --time=48:00:00  # Recommend allocating more CPU than, or equal to the number of GPU
+option gpu=0 -p cpu --mem-per-cpu 2000M --account=bbjs-delta-cpu
+option gpu=1 -p gpuA40x4 --gres=gpu:1 -c 16 --mem 60000M --account=bbjs-delta-gpu
+option gpu=4 -p gpuA40x4 --gres=gpu:4 -c 64 --mem 240000M --account=bbjs-delta-gpu
+option gpu=* -p gpuA40x4 --gres=gpu:$0 -c 32 --mem 120000M --account=bbjs-delta-gpu
+# Recommend allocating more CPU than, or equal to the number of GPU
 # note: the --max-jobs-run option is supported as a special case
 # by slurm.pl and you don't have to handle it in the config file.
-    # -c $0 (means CPU)
-
-option gpu=* -p GPU-shared --gres=gpu:$0 --time=3:00:00 # --cpus-per-gpu 6 --mem-per-gpu 60000M
-# option gpu=* -p GPU-small --gres=gpu:$0 --time=8:00:00 --cpus-per-gpu 5 --mem-per-gpu 64375M
 option mail-type=BEGIN,END,FAIL
 option mail-user=kalvin1204@gmail.com
