--- a/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_transformer_size768_e12_d12_lr1e-4_piecewise_lr.yaml
+++ b/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_transformer_size768_e12_d12_lr1e-4_piecewise_lr.yaml
@@ -60,6 +60,7 @@ encoder_conf:
     attention_dropout_rate: 0.1
     input_layer: conv2d2
     normalize_before: true
+    use_flash_attn: true
 
 decoder: transformer
 decoder_conf:
@@ -70,6 +71,7 @@ decoder_conf:
     positional_dropout_rate: 0.1
     self_attention_dropout_rate: 0.1
     src_attention_dropout_rate: 0.1
+    use_flash_attn: true
 
 model_conf:
     ctc_weight: 0.3
