reduce batch size, increase accum_grad, more frequent checkpointing with num_iters_per_epoch

--- a/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_transformer_size768_e12_d12_lr1e-4_piecewise_lr.yaml
+++ b/egs2/ipapack_plus/s2t1/conf/tuning/train_s2t_transformer_size768_e12_d12_lr1e-4_piecewise_lr.yaml
@@ -93,10 +93,11 @@ scheduler_conf:
     warmup_lr_list: [0., 5.0e-05, 0.0005]
 
 batch_type: unsorted
-batch_size: 256
-accum_grad: 1
+# global batch size is 256
+batch_size: 16
+accum_grad: 16
 batch_bins: 1000000
-num_iters_per_epoch: 15000
+num_iters_per_epoch: 10000
 max_epoch: 45
 patience: none
 init: none
