fix: Fixed allophone layer indexing and OOV issue when validating on a mapped validation set

--- a/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_allophones_phoible.yaml
+++ b/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_allophones_phoible.yaml
@@ -10,6 +10,8 @@ frontend_conf:
     download_dir: ./hub
     multilayer_feature: True
 
+normalize: null
+
 encoder: allophant
 encoder_conf:
     phoneme_embedding_size: 640
