feat: Updated loss handling to avoid running backward without a scaler in mixed precision training and changed frontend to huggingface

--- a/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
+++ b/egs2/ipapack_fleco/asr1/conf/tuning/train_asr_allophant_shared_panphon.yaml
@@ -1,16 +1,12 @@
 seed: 11711
 freeze_param: [
-  "frontend.upstream.upstream.model.feature_extractor"
+  "frontend.encoder.feature_extractor"
 ]
 
-frontend: s3prl
+frontend: huggingface
 frontend_conf:
-    frontend_conf:
-        upstream: xls_r_300m
-        normalize: true
+    model: "facebook/wav2vec2-xls-r-300m"
     download_dir: ./hub
-    eval_mode: false
-    multilayer_feature: false
 
 normalize: null
 
@@ -108,7 +104,7 @@ keep_nbest_models: 10
 unused_parameters: true
 log_level: INFO
 
-use_amp: false
+use_amp: true
 cudnn_deterministic: false
 cudnn_benchmark: false
 
