feat: Updated preprocessing to support the full IPAPack+ dataset

--- a/egs2/ipapack_plus/asr1/conf/tuning/train_asr_allophant_allophones_phoible.yaml
+++ b/egs2/ipapack_plus/asr1/conf/tuning/train_asr_allophant_allophones_phoible.yaml
@@ -75,6 +75,11 @@ encoder_conf:
       - tgk
       - urd
       - uzb
+      - bak
+      - ina
+      - kmr
+      - tat
+      - uig
     allophone_languages:
       - afr
       - amh
@@ -204,8 +209,8 @@ patience: none
 init: xavier_uniform
 best_model_criterion:
 -   - valid
-    - acc
-    - max
+    - loss_ctc
+    - min
 -   - valid
     - total_count
     - max
